--- a/packages/dmg-builder/package.json
+++ b/packages/dmg-builder/package.json
@@ -13,8 +13,7 @@
 	"homepage": "https://github.com/electron-userland/electron-builder",
 	"files": [
 		"out",
-		"templates",
-		"vendor"
+		"templates"
 	],
 	"dependencies": {
 		"app-builder-lib": "workspace:*",
