--- a/.changeset/config.release-v26.json
+++ b/.changeset/config.release-v26.json
@@ -8,10 +8,14 @@
     "dmg-builder",
     "electron-builder",
     "electron-builder-squirrel-windows",
+    "electron-forge-maker-appimage",
+    "electron-forge-maker-nsis",
+    "electron-forge-maker-nsis-web",
+    "electron-forge-maker-snap",
     "electron-publish"
   ]],
   "access": "public",
-  "baseBranch": "master",
+  "baseBranch": "release/v26.x",
   "updateInternalDependencies": "patch",
   "ignore": ["@electron-builder/test"]
 }
