--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -75,7 +75,8 @@ jobs:
 
       - name: Link changeset config for this branch
         run: |
-          CONFIG_PATH=".changeset/${{ steps.dist-tag.outputs.config_file }}"
+          CONFIG_FILE="${{ steps.dist-tag.outputs.config_file }}"
+          CONFIG_PATH=".changeset/$CONFIG_FILE"
 
           # Verify config exists
           if [ ! -f "$CONFIG_PATH" ]; then
@@ -85,17 +86,27 @@ jobs:
           fi
 
           # Only create symlink if it's not already the default config.json
-          if [ "${{ steps.dist-tag.outputs.config_file }}" != "config.json" ]; then
+          if [ "$CONFIG_FILE" != "config.json" ]; then
             # Remove existing config.json if it exists (could be a file or symlink)
             rm -f .changeset/config.json
 
-            # Create symbolic link
-            ln -s "$(basename $CONFIG_PATH)" .changeset/config.json
-            echo "Linked .changeset/config.json -> $CONFIG_PATH"
+            # Create symbolic link (using relative path from .changeset/ directory)
+            cd .changeset
+            ln -s "$CONFIG_FILE" config.json
+            cd ..
+
+            echo "Linked .changeset/config.json -> .changeset/$CONFIG_FILE"
 
             # Verify the link worked
             if [ ! -L ".changeset/config.json" ]; then
               echo "::error::Failed to create symbolic link"
+              exit 1
+            fi
+
+            # Verify the link points to the right file
+            LINK_TARGET=$(readlink .changeset/config.json)
+            if [ "$LINK_TARGET" != "$CONFIG_FILE" ]; then
+              echo "::error::Symlink points to wrong target: $LINK_TARGET (expected: $CONFIG_FILE)"
               exit 1
             fi
           else
