--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -254,7 +254,7 @@ jobs:
         testFiles:
           - oneClickInstallerTest,assistedInstallerTest,webInstallerTest,packageManagerTest,HoistedNodeModuleTest,rebuilderTest
           - winPackagerTest,winCodeSignTest,BuildTest,blackboxUpdateTest,debTest
-          - masTest,dmgTest,filesTest,macPackagerTest,macArchiveTest,assistedInstallerTest
+          - masTest,dmgTest,filesTest,macPackagerTest,macArchiveTest
           - concurrentBuildsTest,macIconTest
     steps:
       - name: Checkout code repository
