--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -8,6 +8,10 @@
     "dmg-builder",
     "electron-builder",
     "electron-builder-squirrel-windows",
+    "electron-forge-maker-appimage",
+    "electron-forge-maker-nsis",
+    "electron-forge-maker-nsis-web",
+    "electron-forge-maker-snap",
     "electron-publish"
   ]],
   "access": "public",
