--- a/packages/app-builder-lib/package.json
+++ b/packages/app-builder-lib/package.json
@@ -52,7 +52,7 @@
     "@electron/fuses": "^1.8.0",
     "@electron/notarize": "2.5.0",
     "@electron/osx-sign": "1.3.3",
-    "@electron/rebuild": "4.0.1",
+    "@electron/rebuild": "^4.0.3",
     "@electron/universal": "2.0.3",
     "@malept/flatpak-bundler": "^0.4.0",
     "@types/fs-extra": "9.0.13",
@@ -77,7 +77,7 @@
     "plist": "3.1.0",
     "resedit": "^1.7.0",
     "semver": "~7.7.3",
-    "tar": "^7.5.4",
+    "tar": "^7.5.6",
     "temp-file": "^3.4.0",
     "tiny-async-pool": "1.3.0",
     "which": "^5.0.0"
