--- a/packages/app-builder-lib/package.json
+++ b/packages/app-builder-lib/package.json
@@ -53,7 +53,7 @@
     "@electron/get": "^3.0.0",
     "@electron/notarize": "2.5.0",
     "@electron/osx-sign": "1.3.3",
-    "@electron/rebuild": "4.0.1",
+    "@electron/rebuild": "^4.0.3",
     "@electron/universal": "2.0.3",
     "@malept/flatpak-bundler": "^0.4.0",
     "@types/fs-extra": "9.0.13",
@@ -79,7 +79,7 @@
     "proper-lockfile": "^4.1.2",
     "resedit": "^1.7.0",
     "semver": "~7.7.3",
-    "tar": "7.5.3",
+    "tar": "^7.5.6",
     "temp-file": "^3.4.0",
     "tiny-async-pool": "1.3.0",
     "which": "^5.0.0"
