Key Changes - Duplicate Dependency Handling When a duplicate dependency is detected (has _dependencies but empty dependencies), we now: - Fetch the complete tree from allDependencies.get(dependencyId) - Use this tree for both dependencies and _dependencies checks - This ensures we filter against matching _dependencies, preventing the "too many files" issue

--- a/test/src/updater/dockerfile-appimage
+++ b/test/src/updater/dockerfile-appimage
@@ -1,4 +1,4 @@
-FROM buildpack-deps:noble-curl
+FROM buildpack-deps:jammy-curl
 
 ENV DEBIAN_FRONTEND=noninteractive
 
@@ -6,10 +6,10 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && \
     apt-get install -y software-properties-common && \
     add-apt-repository universe && \
-    apt-get update
+    rm -rf /var/lib/apt/lists/*
 
 # Install required libraries for AppImages and legacy binaries
-RUN apt-get install -y \
+RUN apt-get update && apt-get install -y \
     fuse3 \
     libfuse2 \
     libasound2-dev \
@@ -35,7 +35,16 @@ RUN apt-get install -y \
     ca-certificates \
     zlib1g-dev \
     file \
-    xvfb
+    xvfb \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y python3.11 python3-setuptools make gcc g++ \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN apt-get update && apt-get install -y libvips-dev libglib2.0-dev pkg-config  \
+    && rm -rf /var/lib/apt/lists/*
+
+ENV PYTHON=/usr/bin/python3.11
 
 # Create fuse mount permissions
 RUN echo "user_allow_other" >> /etc/fuse.conf
@@ -46,5 +55,8 @@ RUN ln -s /usr/bin/fuse3 /usr/bin/fuse || true
 RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash -
 RUN apt-get install -y nodejs
 RUN npm --silent install --global --depth 0 pnpm corepack \
- && corepack enable
+  && corepack enable
 
+ENV PKG_CONFIG_PATH=/usr/lib/aarch64-linux-gnu/pkgconfig:/usr/lib/pkgconfig
+ENV CFLAGS="-I/usr/include/glib-2.0 -I/usr/lib/aarch64-linux-gnu/glib-2.0/include"
+ENV CPPFLAGS="-I/usr/include/glib-2.0 -I/usr/lib/aarch64-linux-gnu/glib-2.0/include"
