--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "console": "integratedTerminal",
       "internalConsoleOptions": "openOnFirstSessionStart",
       "env": {
-        "TEST_FILES": "packageManagerTest",
+        "TEST_FILES": "msiWrappedTest",
         "UPDATE_SNAPSHOT": "false",
         "DEBUG": "electron-builder",
         "TEST_SEQUENTIAL": "true" // Run tests sequentially to debug issues that may be hidden by concurrency (console log pollution when DEBUG flag set)
