## Pull request overview
This pull request updates the Windows code signing toolset (win-codesign) to resolve an issue where dylib symbolic links were failing to be created on Windows during the build process. The PR introduces a configurable `winCodeSign` option that allows users to choose between the legacy toolset ("0.0.0") and the new Windows Kits Bundle ("1.0.0").

**Changes:**
- Added `winCodeSign` configuration option to `WindowsConfiguration` with support for "0.0.0" (legacy) and "1.0.0" (new toolset)
- Refactored tool path resolution logic into centralized functions in `targets/tools.ts`
- Parameterized Windows packaging tests to run against both toolset versions

--- a/.github/actions/pretest/action.yml
+++ b/.github/actions/pretest/action.yml
@@ -7,6 +7,11 @@ inputs:
   cache-path:
     description: 'The path to the electron cache'
     required: true
+  reset-vitest-smart-cache:
+    description: "Reset Vitest smart cache (will cause all tests to run without caching for this run, then cache will be repopulated for future runs)"
+    required: false
+    type: boolean
+    default: false
 
 runs:
   using: 'composite'
@@ -26,12 +31,17 @@ runs:
 
     - name: Restore Vitest Smart Cache
       id: cache-restore
+      if: inputs.reset-vitest-smart-cache != 'true'
       uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
       with:
         path: ${{ github.workspace }}/test/vitest-scripts/_vitest-smart-cache.json
         key: vitest-smart-cache-${{ github.ref_name }}-${{ github.sha }}
         restore-keys: |
           vitest-smart-cache-${{ github.ref_name }}-
+
+    - name: Set up Vitest smart cache reset flag 
+      run: echo "RESET_VITEST_SNAPSHOT=${{ inputs.reset-vitest-smart-cache }}" >> $GITHUB_ENV
+      shell: bash
 
     - name: Log cache status
       run: |
