feat: adds support for a new AppImage static runtime toolset, providing an opt-in alternative to the legacy FUSE2-based AppImage packaging system.

--- a/.github/actions/pretest/action.yml
+++ b/.github/actions/pretest/action.yml
@@ -39,7 +39,7 @@ runs:
           vitest-smart-cache-${{ github.ref_name }}-
 
     - name: Set up Vitest smart cache reset flag
-      run: echo "RESET_VITEST_SNAPSHOT=${{ inputs.reset-vitest-smart-cache }}" >> $GITHUB_ENV
+      run: echo "RESET_VITEST_SHARD_CACHE=${{ inputs.reset-vitest-smart-cache }}" >> $GITHUB_ENV
       shell: bash
 
     - name: Log cache status
