--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-
+      - release/v*
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
