chore: release cut of v27

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -4,7 +4,8 @@ on:
   push:
     branches:
       - master
-      - release/v*
+      - release/v27
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
